--- a/apps/doc/package.json
+++ b/apps/doc/package.json
@@ -37,6 +37,8 @@
             "build": {
                 "dependsOn": [
                     "@ts-retype/snippets:bin",
+                    "@ts-retype/dev:run-readme",
+                    "@ts-retype/dev:run-cmd",
                     "@ts-retype/uikit:build"
                 ]
             }
