fix: task dependencies

--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -37,6 +37,11 @@
     },
     "nx": {
         "targets": {
+            "bin": {
+                "dependsOn": [
+                    "compile"
+                ]
+            },
             "compile": {
                 "dependsOn": [
                     "@ts-retype/dev:run-bin"
