--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@ts-retype/bin",
     "sideEffects": false,
-    "version": "1.0.0",
+    "version": "0.3.0-alpha.0",
     "description": "",
     "type": "module",
     "main": "dist/index.cjs",
