--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@ts-retype/bin",
     "sideEffects": false,
-    "version": "0.3.0-dev.0",
+    "version": "0.3.0-dev.4",
     "description": "",
     "type": "module",
     "main": "dist/index.cjs",
@@ -16,7 +16,7 @@
         "clean": "rm -rf ./dist",
         "dev": "node dist/index.cjs",
         "publish": "cd ./dist/release && npm publish",
-        "release": "echo 'Released'",
+        "release": "pnpm --filter @ts-retype/dev run-bump -x --level dev",
         "start": "node dist/index.cjs --help",
         "stats": "rollup -c rollup.config.mjs",
         "test": "vitest run --coverage"
@@ -42,7 +42,7 @@
             "release": {
                 "dependsOn": [
                     "@ts-retype/bin:compile",
-                    "@ts-retype/dev:run-bump"
+                    "@ts-retype/dev:build"
                 ]
             },
             "bin": {
