--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -16,7 +16,7 @@
         "clean": "rm -rf ./dist",
         "dev": "node dist/index.cjs",
         "publish": "cd ./dist/release && npm publish",
-        "release": "pnpm --filter @ts-retype/dev run-bump -x --level dev",
+        "release": "pnpm --filter @ts-retype/dev run-bump -x --app bin --level dev",
         "start": "node dist/index.cjs --help",
         "stats": "rollup -c rollup.config.mjs",
         "test": "vitest run --coverage"
