--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: 📦 Publish on NPM
+name: 📦  Publish on NPM
 on:
   release:
     types: [created]
@@ -7,21 +7,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: 20
           registry-url: 'https://registry.npmjs.org'
-      - name: 💾 Install dependencies
+      - name: 💾  Install dependencies
         run: |
           npm add -g pnpm
           pnpm install
-      - name: 🔬 Run tests
+      - name: 🔬  Run tests
         run: pnpm run test
-      - name: 🔧 Compile
+      - name: 🔧  Compile
         run: pnpm run compile
-      - name: 📦 Publish on NPM
+      - name: 📦  Publish on NPM
         run: pnpm run publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
