--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -48,6 +48,8 @@
         "typescript": "^5.4.2"
     },
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@types/node": "^20.11.25",
         "@types/progress": "^2.0.7",
         "@types/ramda": "^0.28.25",
         "@vitest/coverage-v8": "^1.3.1",
