--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@ts-retype/bin",
     "sideEffects": false,
-    "version": "0.3.0-dev.6",
+    "version": "0.3.0-dev.5",
     "description": "Discover duplicate TypeScript types in your codebase.",
     "license": "MIT",
     "keywords": [
@@ -33,8 +33,7 @@
         "dev": "node dist/index.cjs",
         "publish": "cd ./dist/release && npm publish",
         "start": "node dist/index.cjs --help",
-        "stats": "rollup -c rollup.config.mjs",
-        "test": "vitest run --coverage"
+        "stats": "rollup -c rollup.config.mjs"
     },
     "dependencies": {
         "@ts-retype/search": "workspace:^",
@@ -45,9 +44,7 @@
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/node": "^20.11.25",
-        "@vitest/coverage-v8": "^1.3.1",
-        "tsup": "^8.0.2",
-        "vitest": "^1.3.1"
+        "tsup": "^8.0.2"
     },
     "nx": {
         "targets": {
