fix: error handling

--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -35,7 +35,8 @@
         "clean": "rm -rf ./dist",
         "start": "node dist/index.js",
         "stats": "rollup -c rollup.config.mjs",
-        "test": "vitest run --coverage"
+        "test": "vitest run --coverage",
+        "test:watch": "vitest watch"
     },
     "keywords": [],
     "author": "",
