test: add stress test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "ignorePatterns": [
         "dist/",
         "tests/example/",
+        "packages/search/tests/sources/",
         "generated/",
         "vitest.d.ts"
     ],
